--- a/About/index.html
+++ b/About/index.html
@@ -5,7 +5,7 @@ title: More about my life...
 <div class="blurb">
 	
 	<h3>Hello, My name is Hiba!</h3>
-	<img src="/Images/HibaAlhossen.png" alt="HibaAlhossen" width="150">
+	<img src="/Images/hiba.PNG" alt="HibaAlhossen" width="150">
 	<p> I come from Syria, I am 28 years old and living in Bern.I get a Bachelor of communication and networking Engineering.
 I have worked in a communication company. as a communication engineer in the maintenance and monitoring department.
 
