--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Hiba Alhossen
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hiba Alhossen!</h1>
-	<p>Creativity and Motivation is my passion <em> with Devilopping</em> Just follow me. <a href="/about">Read more about my life...</a></p>
+	<p>My First step in <em>Developing world</em>, let's start. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
