--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hiba Alhossen
+title: Hiba Alhossen, Developer
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hiba Alhossen!</h1>
